[package]
name = "rbrinfo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-rbrinfo"

[[bin]]
name = "rbrinfo"

[dependencies]
cargo_metadata = "0.18.1"
log = "0.4.21"
petgraph = "0.6.5"
serde_json = "1.0.116"
syn = { version = "2.0.66", features = [ "parsing", "full", "visit", "extra-traits", "visit-mut" ] }
quote = "1.0.36"
proc-macro2 = { version = "1.0.84", features = ["span-locations"] }
regex = "1.10.4"
